--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@ seaborn==0.11.1
 plotly==4.5.2
 streamlit==0.85.0
 pandas==1.3.0
-wordcloud==1.8.1
+scikit-learn==1.0.1
+scipy==1.6.2
+numpy==1.19.5
 pillow
